--- a/_posts/jekyll/2022-09-04-bug.md
+++ b/_posts/jekyll/2022-09-04-bug.md
@@ -7,8 +7,9 @@ tags: [ERROR]
 ---
 
 ## TOC
-1. [나의 상황..😱](#나의-상황..😱)
-2. [문제 해결](#문제-해결)
+- [TOC](#toc)
+  - [나의 상황..😱](#나의-상황)
+  - [문제 해결](#문제-해결)
 
 
 ---
@@ -32,7 +33,9 @@ at Process.ChildProcess._handle.onexit (node:internal/child_process:301:5)
 ### 문제 해결
 `bundle lock --add-platform x86_64-linux`
 
+을 terminal에 입력해주세요
+
 루비의 버전과 os문제로 추정되는 에러를 만났습니다.
 
 [bundler](https://bundler.io/guides/getting_started.html#getting-started)
-루비 진영에 대해서 자세히 알지는 못하지만 bundler의 설명에 따라
+루비 진영에 대해서 자세히 알지는 못하지만 위 링크에서 자세한 내용을 확인할 수 있습니다.
