알고리즘 추가 글 추가 및 about추가

--- a/_posts/algorithm/2022-10-25-baekjoon-1330-2588-3003-node-js.md
+++ b/_posts/algorithm/2022-10-25-baekjoon-1330-2588-3003-node-js.md
@@ -2,6 +2,7 @@
 layout: post
 title: baekjoon 1330, 2588, 3003, - node.js
 date: 2022-10-25 02:09 +0900
+categories: ["algorithm"]
 tags: ["BAEKJOON", "NODE.JS", "1330", "2588","3003"]
 ---
 
