--- a/_posts/algorithm/2022-10-29-baekjoon-5597-3052-node-js.md
+++ b/_posts/algorithm/2022-10-29-baekjoon-5597-3052-node-js.md
@@ -2,6 +2,7 @@
 layout: post
 title: baekjoon 5597, 3052 - node.js
 date: 2022-10-29 13:54 +0900
+categories: ["algorithm"]
 tags: ["BAEKJOON", "NODE.JS"]
 ---
 
