--- a/_posts/programing/2023-02-02-odd-even.md
+++ b/_posts/programing/2023-02-02-odd-even.md
@@ -55,10 +55,8 @@ ab1.next()
 ab1.next()
 {value: undefined, done: true}
 ```
-그렇다 내가 말하고 싶은 인사이트는 바로 위 문제를 순열로 바라보고
+그렇다 내가 말하고 싶은 인사이트는 바로 위 문제를 수열로 바라보고
 이를 iterable로 풀어내는 것이다.
-
-iterable이야 말로 순열을 다루기에 가장 적합한 함수이기 때문이다.
 
 아니 그런데 위의 코드는 배열이 아니다.
 
