문제풀이 과정을 나누기

--- a/content/blog/CS/ALGORITHMS/BOOKS/JONGMAN/문제풀이_과정을_나누자.md
+++ b/content/blog/CS/ALGORITHMS/BOOKS/JONGMAN/문제풀이_과정을_나누자.md
@@ -25,13 +25,13 @@ tags: [JONGMAN]
 3. 계획 세우기
     - 여러 해법이 떠올랐다면 어떤 방법을 선택할지 계획을 세운다. 만약 아이디어가 하나 뿐이라면 자동적으로 스킵된다.
 4. 계획 검증하기
-   - 해당 계획을 머리속으로 굴려보자 실제 구현을 하기 전 마지막 전검을 하는 것인데 계획이 결과적으로 정답을 도출 할 수 있는지를 생각해보라는 것이다.
+   - 해당 계획을 머리속으로 굴려보자 실제 구현을 하기 전 마지막 점검을 하는 것인데 계획이 결과적으로 정답을 도출 할 수 있는지를 생각해보라는 것이다.
 5. 계획 수행하기
     - 잘 구현을 하라는 말이다.
 6. 회고하기
     - 알고리즘 문제는 꼴보기 싫어지는 속성이 있어서 한 번 풀어본 문제를 또 풀기 싫은 경우가 100% 이다.
     하지만 이런 문제를 또 풀어보거나 내 풀이와 다른 사람의 풀이를 비교해 본다면 해당 알고리즘을 더 능숙하게 사용 할 수 있을 뿐 아니라 다른 문제에도 자연히 손이가게 되는 능숙한 무기가 될 수 있다.
-    
+
 
 
 
