--- a/content/blog/CS/BOOK/JONGMAN/입문자를_위한_커리큘럼.md
+++ b/content/blog/CS/BOOK/JONGMAN/입문자를_위한_커리큘럼.md
@@ -12,7 +12,7 @@ date: 2023-04-12 11:20:00.00
 |알고리즘의 시간 복잡도 분석|
 |무식하게 풀기 (brute force)|
 |분할 정복|
-|동적 계법|
+|동적 계획법|
 |선형 자료 구조|
 |큐와 스택, 데크|
 |트리의 구현과 순회|
