--- a/content/blog/MATHEMATICS/FreeFromMath/Sets/2.3-cardinality-of-sets.md
+++ b/content/blog/MATHEMATICS/FreeFromMath/Sets/2.3-cardinality-of-sets.md
@@ -9,28 +9,28 @@ coverURL:
 
 ### Cardinality는 집합의 원소의 갯수를 말한다.
 
-- 예를 들어 집합 \(A=\{x \mid (x \text{ is a natural number from 1 to 3})\}\)라고 했을 때, \( |A|=3 \)이 된다.
-- 예를 들어 집합 \(B=\{q \mid q = 1, 2\}\)에서 \( |B|=2 \)이다.
+- 예를 들어 집합 $A=\{x \mid x \text{ is a natural number from 1 to 3}\}$ 라고 했을 때, $|A|=3$이 된다.
+- 예를 들어 집합 $B=\{q \mid q = 1, 2\}$에서 $|B|=2$이다.
 
 ### 특별한 Cardinality
 
-- Cardinality of Empty Set | 공집합의 카디널리티 \( |\emptyset|=0 \)
-- Singleton Set | 싱글톤 카디널리티 \( |A|=1 \)
-- Equivalent Sets \( |A|=|B| \) | 서로 카디널리티가 같은 집합
+- Cardinality of Empty Set | 공집합의 카디널리티 $|\emptyset|=0$
+- Singleton Set | 싱글톤 카디널리티 $|A|=1$
+- Equivalent Sets $|A|=|B|$ | 서로 카디널리티가 같은 집합
 
 ### Finite Set과 Infinite Sets
 
 - Finite Set | 원소의 개수가 한정되어 있는 집합
-    - \( |A| = 0 \text{ or } n \)
+    - $|A| = 0 \text{ or } n$
     - Finite Set의 특징으로는 원소를 인코딩할 수 있다는 것이다.
         - Finite Set은 그 갯수가 유한하기 때문에 각 원소에 숫자를 매핑할 수 있다. 이를 Encoding of Elements라고 한다.
         
-        - 예를 들어 \( |B|=\{x \mid x \text{ is a letter of the alphabet}\} \)일 때, \( a:1, b:2, \ldots \)처럼 인덱싱하게 된다.
+        - 예를 들어 $|B|=\{x \mid x \text{ is a letter of the alphabet}\}$일 때, $a:1, b:2, \ldots$처럼 인덱싱하게 된다.
 - Infinite Set | 원소의 개수가 무한한 집합
-    - \( |A|=\infty \)
+    - $|A|=\infty$
     - Infinite Set은 두 가지로 나뉜다.
         - Countably Infinite Sets
             - 인코딩이 가능
-                - 정수를 예로 들자면 \( \mathbb{Z}=\{0, -1, 1, -2, 2, \cdots\} \)의 형태로 나열 순서를 변경해 인코딩이 가능하다.
+                - 정수를 예로 들자면 $\mathbb{Z}=\{0, -1, 1, -2, 2, \cdots\}$의 형태로 나열 순서를 변경해 인코딩이 가능하다.
         - Uncountably Infinite Sets
             - 인코딩이 불가능
